# gdsfactory-photonics-training

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pages.yml  test_code.yml
docs/: _config.yml  _toc.yml  zensical.yml
notebooks/: 00_klayout.ipynb  01_vscode.ipynb  02_python.ipynb  03_git.ipynb  10_layout.ipynb  10_layout_full.ipynb  11_drc.ipynb  20_modesolver_fem.ipynb  21_modesolver_fdfd.ipynb  22_heater_fem.ipynb  30_mzi.ipynb  31_ring.ipynb
